fix toast alignment

--- a/src/components/toast/index.scss
+++ b/src/components/toast/index.scss
@@ -32,7 +32,7 @@
     padding: 16px;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
     gap: 16px;
     width: auto;
     @include util.rtl-position("left", 0);
